--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "StageVariantHelper",
+	"name": "StageVariants",
 	"version_number": "1.0.0",
 	"website_url": "https://github.com/Tizitendo/Onyx-StageVariants",
 	"description": "Adds tileset swaps as stage variants",
